// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supermarket applies five for amount discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "5 for 7.49",
      "discountAmount": 1.459999999999999,
      "product": Product {
        "name": "toothpaste",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 1.79,
      "product": Product {
        "name": "toothpaste",
        "unit": 1,
      },
      "quantity": 5,
      "totalPrice": 8.95,
    },
  ],
}
`;

exports[`Supermarket applies ten percent discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "10% off",
      "discountAmount": 0.24900000000000003,
      "product": Product {
        "name": "rice",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 2.49,
      "product": Product {
        "name": "rice",
        "unit": 1,
      },
      "quantity": 1,
      "totalPrice": 2.49,
    },
  ],
}
`;

exports[`Supermarket applies three for two discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "3 for 2",
      "discountAmount": 0.9899999999999998,
      "product": Product {
        "name": "toothbrush",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 0.99,
      "product": Product {
        "name": "toothbrush",
        "unit": 1,
      },
      "quantity": 3,
      "totalPrice": 2.9699999999999998,
    },
  ],
}
`;

exports[`Supermarket applies twenty percent discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "20% off",
      "discountAmount": 0.39799999999999996,
      "product": Product {
        "name": "apples",
        "unit": 0,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 1.99,
      "product": Product {
        "name": "apples",
        "unit": 0,
      },
      "quantity": 1,
      "totalPrice": 1.99,
    },
  ],
}
`;

exports[`Supermarket applies two for amount discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "2 for 0.99",
      "discountAmount": 0.3899999999999999,
      "product": Product {
        "name": "cherry tomatoes",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 0.69,
      "product": Product {
        "name": "cherry tomatoes",
        "unit": 1,
      },
      "quantity": 2,
      "totalPrice": 1.38,
    },
  ],
}
`;
